Fix css on mobile tile teasers on resources library page to show the body content.

--- a/modules/social_features/social_featured_content/css/paragraph.featured.scss
+++ b/modules/social_features/social_featured_content/css/paragraph.featured.scss
@@ -52,6 +52,7 @@
 
 .teaser.teaser--tile {
   flex-direction: column;
+  flex-wrap: nowrap;
   height: auto;
 
   // IE11 hack
